Fixed scrollbar issue. Customized scrollbar for webkit.

--- a/exchange-client/src/app/pages/exchange-container/exchange-container.component.scss
+++ b/exchange-client/src/app/pages/exchange-container/exchange-container.component.scss
@@ -4,6 +4,10 @@ app-left-sidebar {
   width: 100%;
 }
 
+.center-container {
+  padding-right: 2rem;
+}
+
 .center-spinner {
   position: absolute;
   top: 200%;
