--- a/exchange-client/src/assets/styles/colors.scss
+++ b/exchange-client/src/assets/styles/colors.scss
@@ -1,5 +1,9 @@
 $color-white: #FFF;
+$color-white-f5: #F5F5F5;
 $color-light-cyan: #C2DACA;
 $color-green: #13872E;
+$color-blue: #0AE;
+$color-blue-lighter: #0CF;
 $color-dark-blue: #3E5963;
+$color-grey: rgba(255, 255, 255, .2);
 $color-dark-transparent-15: rgba(0, 0, 0, .15)
