--- a/exchange-client/src/styles.scss
+++ b/exchange-client/src/styles.scss
@@ -1,11 +1,34 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~font-awesome/css/font-awesome.min.css';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
 @import 'assets/styles/colors';
 @import 'assets/styles/fonts';
 
 body {
+  margin-right: calc(-1 * (100vw - 100%));
   background-color: $color-white;
   font-family: $font-main;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: $color-white-f5;
+  -webkit-box-shadow: inset 0 0 6px $color-dark-transparent-15;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: $color-white-f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: $color-blue -webkit-gradient(linear, 0 0, 0 100%,
+    color-stop(.5, $color-grey),
+    color-stop(.5, transparent), to(transparent));
+
+  &:hover {
+    background: #0CF;
+  }
 }
